hphp/test/quick/memoize_static.php.expectf

Fatal error: <<__Memoize>> cannot be used on static methods yet in %s/test/quick/memoize_static.php on line 4
